<resources>
    <string name="app_name">MyApp</string>
    <string name="hello">¡Hola!</string>
    <string name="username_hint">Usuario</string>
    <string name="password_hint">Contraseña</string>
    <string name="remember_me">Recordarme</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="forgot_password">¿Has olvidado tu contraseña?</string>
    <string name="login_error_message">¡Error, usuario o contraseña incorrectos!</string>
    <string name="resumen_incidencias">Resumen de incidencias</string>
    <string name="indicencias_totales">\nIndicendias totales</string>
    <string name="ultimas_incidencias">Últimas incidencias</string>
    <string name="descripcion_scrollView">Este componente sirve para poder scrollear la app</string>
    <string name="tipo_de_incidencia">Tipo de Incidencia</string>
    <string name="subtipo_incidencias">Subtipo</string>
    <string name="sub_subTipo">Otro dato más:</string>
    <string name="siguiente">Siguiente</string>
    <string name="mis_incidencias">Mis incidencias</string>
    <string name="_12_nabiertas">\nAbiertas</string>
    <string name="_12_nasignadas">\nAsignadas</string>
    <string name="_12_nen_proceso">\nEn proceso</string>
    <string name="_12_nresueltas">\nResueltas</string>
    <string name="_12_ncerradas">\nCerradas</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="incidencia_id">Incidencia #ID</string>
    <string name="tipo_de_incidencia_edit">Tipo de incidencia:</string>
    <string name="ejemplo_incidencia">Equipos Pc Ordenador</string>
    <string name="fecha_de_creaci_n">Fecha de creación:</string>
    <string name="descripcion">Descripción:</string>
    <string name="escribir">Escribir...</string>
    <string name="equipo_id">Equipo Id</string>
    <string name="equipo_incidencia">Equipo Incidencia</string>
    <string name="estado">Estado</string>
    <string name="prueba_estado">Abierta</string>
    <string name="fecha_cierre">Fecha cierre:</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="fecha_prueba">1/02/2022</string>
    <string name="ejemplo_descripcion">El ordeandor .... no funciona</string>
    <string name="if_02">IF-02</string>
    <string name="fecha_cierre_prueba">20/02/2022</string>
    <string name="volver">Volver</string>
    <string name="modificar">Modificar</string>
    <string name="acerca_de">Acerca de...</string>
    <string name="explicacion">Esta aplicación ha sido desarrollada por:</string>
    <string name="desarrolladores">Verónica Álvarez Lavín \nVladyslav Golovatyi Tsymbal \nJosé David Casas Gómez \nIván Díaz Fernández \nAlejandro Peñil Haya \nVíctor Cuevas Martínez</string>
    <string name="copy_right">© 2024 IES Miguel Herrero Pereda.\nTodos los derechos han sido reservados.</string>
    <string name="ayuda">Ayuda</string>

    <string-array name="TiposIncidencias">
        <item>EQUIPOS</item>
        <item>CUENTAS</item>
        <item>WIFI</item>
        <item>INTERNET</item>
        <item>SOFTWARE</item>
    </string-array>

    <string-array name="IncidenciaEquipos">
        <item>PC</item>
        <item>ALTAVOZ</item>
        <item>MONITOR</item>
        <item>PROYECTOR</item>
        <item>PANTALLA</item>
        <item>PORTATIL</item>
        <item>IMPRESORA</item>
    </string-array>

    <string-array name="IncidenciaEquiposPc">
        <item>ORDENADOR</item>
        <item>RATÓN</item>
        <item>TECLADO</item>
    </string-array>

    <string-array name="IncidenciaEquiposPortatil">
        <item>PROPORCIONADO POR CONSERJERGÍA</item>
        <item>DE AULA</item>
        <item>TECLADO</item>
    </string-array>


    <string-array name="IncidenciaCuentas">
        <item>EDUCANTABRIA</item>
        <item>GOOGLE CLASSROOM</item>
        <item>DOMINIO</item>
        <item>YEDRA</item>
    </string-array>

    <string-array name="IncidenciaWIFI">
        <item>iesmiguelherrero</item>
        <item>WIECAN</item>
    </string-array>

    <string-array name="IncidenciaInternet">
        <item>INSTALACIÓN</item>
        <item>ACTUALIZACIÓN</item>
    </string-array>

</resources>

