<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".CrearModificarIncidencia.EditIncident">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="665dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtIncidenciaID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/theme1"
                android:hint="@string/incidencia_id"
                android:padding="10sp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tipo_de_incidencia_edit"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtTipoIncidencia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/ejemplo_incidencia" />
                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fecha_de_creaci_n"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtFechaCreacion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:textColor="@color/black"
                        android:layout_marginLeft="10dp"
                        android:enabled="false"
                        android:inputType="date" />

                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/descripcion"
                        android:textStyle="bold" />


                </TableRow>

                <EditText
                    android:id="@+id/editTextDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/escribir"
                    android:inputType="textMultiLine" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/equipo_id"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editTextEquipoIncidencia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/equipo_incidencia"
                        android:inputType="text" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/estado"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btnEstadoIncidencia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"

                        android:text="@string/prueba_estado" />


                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fecha_cierre"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtFechaCierre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="fecha final indeterminada"
                        android:enabled="false"
                        android:inputType="date" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="135dp"
                    android:gravity="center">

                    <Button
                        android:id="@+id/btnCancelar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancelar" />

                    <Button
                        android:id="@+id/btnAceptar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/aceptar" />
                </TableRow>

            </TableLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>